Landing page: fixed horizontal scroll on mobile devices

--- a/webroot/src/app/app-module/components/main-page/about/about.component.css
+++ b/webroot/src/app/app-module/components/main-page/about/about.component.css
@@ -7,14 +7,14 @@
     background-size: 100% 100%;
     //background-position: center -35%;
     background-repeat: no-repeat;
-    height: 94%;
-    //width: 100%;
+    //height: 94%;
+    width: 100%;
 }
 
 .about-content
 {
   text-align: center;
-  padding: 5rem 5rem;
+  //padding: 2% 2%;
 }
 
 .reg
@@ -35,6 +35,7 @@ h1
 h1,p
 {
      color: white;
+    // margin: auto;
 }
 p
 {
